# boox-note-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: format.md
examples/: inspector.rs
src/: container.rs  error.rs  id.rs  json.rs  lib.rs  note_tree.rs  page_model.rs  points.rs  shape.rs  stroke.rs  utils.rs  virtual_doc.rs  virtual_page.rs
