[package]
authors = ["Harry Hornbacher <dev@harry-hornbacher.de>"]
edition = "2024"
name = "boox-note-parser"
version = "0.1.1"
license = "Apache-2.0"
description = "A Rust library for parsing .note files from Onyx Boox e-ink devices."

[dependencies]
byteorder = "1.5.0"
chrono = {version = "0.4.41", features = ["serde"]}
log = "0.4.27"
prost = "0.14.1"
raqote = "0.8.5"
regex = "1.11.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.141"
thiserror = "2.0.12"
uuid = {version = "1.17.0", features = ["serde"]}
zip = { version = "4.3.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tracing-subscriber = "0.3.19"
